<resources>
    <string name="app_name">NavigationDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="radiobutton1">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="radiobutton3">RadioButton</string>
</resources>